Prevent concurrent import of same file
This happens occasionally and results in some errors getting logged - this fix prevents those errors.

--- a/DBAChecksService/DBAChecksService.csproj
+++ b/DBAChecksService/DBAChecksService.csproj
@@ -235,6 +235,7 @@
     <Compile Include="DBAChecksJob.cs" />
     <Compile Include="DestinationHandling.cs" />
     <Compile Include="MaintenanceJob.cs" />
+    <Compile Include="NamedLocker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchedulerService.cs" />
