--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -194,8 +194,8 @@
     <Compile Include="AWSTools.cs" />
     <Compile Include="CollectionConfig.cs" />
     <Compile Include="CollectionConfigSchedule.cs" />
-    <Compile Include="DBAChecksConnection.cs" />
-    <Compile Include="DBAChecksSource.cs" />
+    <Compile Include="DBADashConnection.cs" />
+    <Compile Include="DBADashSource.cs" />
     <Compile Include="DBCollector.cs" />
     <Compile Include="DBImporter.cs" />
     <Compile Include="Encrypt.cs" />
