--- a/DBADash/packages.config
+++ b/DBADash/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.IdentityModel.Protocols" version="6.8.0" targetFramework="net471" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.8.0" targetFramework="net471" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.8.0" targetFramework="net471" />
+  <package id="Microsoft.SqlServer.DacFx.x64" version="150.4897.1" targetFramework="net471" />
   <package id="Microsoft.SqlServer.Management.SqlParser" version="160.20216.14" targetFramework="net471" />
   <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.41011.9" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
