--- a/DBADashServiceConfig/packages.config
+++ b/DBADashServiceConfig/packages.config
@@ -3,24 +3,26 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient" version="2.0.1" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient.SNI" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.9" targetFramework="net472" />
-  <package id="Microsoft.Identity.Client" version="4.21.0" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.25.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.8.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="6.8.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols" version="6.8.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.8.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.8.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Assessment" version="1.0.302" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Assessment.Authoring" version="1.0.282" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Management.SqlParser" version="160.20216.14" targetFramework="net472" />
-  <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.41011.9" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.46041.41" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="Quartz" version="3.2.0" targetFramework="net472" />
+  <package id="Quartz" version="3.2.4" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.8.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
 </packages>
