Global Date filter
Added a "Global" date filter. Rather than have a filter for each performance tab - a single date range is set that affects all tabs.  This provides consistency and avoids the need to keep changing date filters when you are interested in looking at a particular time range.

--- a/DBADashGUI/DBADashGUI.csproj
+++ b/DBADashGUI/DBADashGUI.csproj
@@ -366,6 +366,7 @@
       <DependentUpon>CustomTimePicker.cs</DependentUpon>
     </Compile>
     <Compile Include="Performance\CartesianChartWithDataTable.cs" />
+    <Compile Include="Performance\DateRange.cs" />
     <Compile Include="Performance\IOPerformance.cs">
       <SubType>UserControl</SubType>
     </Compile>
