--- a/DBADashService/DBADashService.csproj
+++ b/DBADashService/DBADashService.csproj
@@ -254,6 +254,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="SchedulerService.cs" />
+    <Compile Include="SchedulerServiceConfig.cs" />
     <Compile Include="SchemaSnapshotJob.cs" />
   </ItemGroup>
   <ItemGroup>
