--- a/DBADashGUI/packages.config
+++ b/DBADashGUI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="2.8.0" targetFramework="net472" />
   <package id="DiffPlex" version="1.6.3" targetFramework="net472" />
   <package id="DiffPlex.Wpf" version="1.1.1" targetFramework="net472" />
   <package id="ICSharpCode.TextEditor" version="3.2.1.6466" targetFramework="net472" />
