Service config S3 bucket location
GUI support for selecting a S3 bucket added
Upgraded AWS nuget

--- a/DBADashServiceConfig/packages.config
+++ b/DBADashServiceConfig/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AWSSDK.Core" version="3.5.3.9" targetFramework="net472" />
+  <package id="AWSSDK.S3" version="3.5.7.12" targetFramework="net472" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
