--- a/DBADashServiceConfig/ServiceConfigTool.csproj
+++ b/DBADashServiceConfig/ServiceConfigTool.csproj
@@ -52,6 +52,12 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AWSSDK.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
+      <HintPath>..\packages\AWSSDK.Core.3.5.3.9\lib\net45\AWSSDK.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="AWSSDK.S3, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
+      <HintPath>..\packages\AWSSDK.S3.3.5.7.12\lib\net45\AWSSDK.S3.dll</HintPath>
+    </Reference>
     <Reference Include="Common.Logging, Version=3.4.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <HintPath>..\packages\Common.Logging.3.4.1\lib\net40\Common.Logging.dll</HintPath>
     </Reference>
@@ -231,6 +237,12 @@
     <Compile Include="DBConnection.Designer.cs">
       <DependentUpon>DBConnection.cs</DependentUpon>
     </Compile>
+    <Compile Include="S3Browser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="S3Browser.Designer.cs">
+      <DependentUpon>S3Browser.cs</DependentUpon>
+    </Compile>
     <Compile Include="ServiceConfig.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -244,6 +256,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DBConnection.resx">
       <DependentUpon>DBConnection.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="S3Browser.resx">
+      <DependentUpon>S3Browser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ServiceConfig.resx">
       <DependentUpon>ServiceConfig.cs</DependentUpon>
@@ -277,6 +292,7 @@
     <None Include="Resources\ASX_Copy_blue_16x.png" />
     <None Include="Resources\Connect_16x.png" />
     <None Include="Resources\FolderOpened_16x.png" />
+    <None Include="Resources\Arch_Amazon-Simple-Storage-Service_16.png" />
     <Content Include="services.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -284,6 +300,9 @@
       <Project>{176c91f1-d5f4-4695-b1ed-2c021249b88f}</Project>
       <Name>DBADash</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\AWSSDK.S3.3.5.7.12\analyzers\dotnet\cs\AWSSDK.S3.CodeAnalysis.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Data.SqlClient.SNI.2.1.1\build\net46\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('..\packages\Microsoft.Data.SqlClient.SNI.2.1.1\build\net46\Microsoft.Data.SqlClient.SNI.targets')" />
