--- a/DBADash/packages.config
+++ b/DBADash/packages.config
@@ -16,6 +16,8 @@
   <package id="Microsoft.SqlServer.Management.SqlParser" version="160.20216.14" targetFramework="net471" />
   <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.46041.41" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net471" />
+  <package id="Polly" version="7.2.1" targetFramework="net471" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.9.0" targetFramework="net471" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
 </packages>
