Error handling improvements

--- a/DBADashService/packages.config
+++ b/DBADashService/packages.config
@@ -19,6 +19,7 @@
   <package id="Microsoft.SqlServer.Management.SqlParser" version="160.20216.14" targetFramework="net472" />
   <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.46041.41" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Polly" version="7.2.1" targetFramework="net472" />
   <package id="Quartz" version="3.2.4" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
